--- a/apps/front/i18n/bg.json
+++ b/apps/front/i18n/bg.json
@@ -1253,7 +1253,8 @@
         "visitor-id": "make-visitor-id: тази бисквитка се използва за проследяване на посещенията на нашата услуга с цел измерване на трафика по анонимен и обобщен начин. Събитията за сърфиране се изпращат на инструмента за анализ MixPanel.",
         "visitor-created-at": "make-visitor-created-at: тази бисквитка се използва за получаване на датата на първото посещение на платформата.",
         "facebook-tracking": "Бисквитка за проследяване на Facebook: тази бисквитка се използва за генериране на статистически данни за броя на посетителите на нашия сайт, за да подобрим сайта си и да подобрим анализа на посещенията.",
-        "hotjar": "Hotjar: Това е инструмент, който позволява поведенчески анализ на използването на уебсайта. За повече информация: "
+        "hotjar": "Hotjar: Това е инструмент, който позволява поведенчески анализ на използването на уебсайта. За повече информация: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Бисквитки \"Социални мрежи\":",
