--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -1299,7 +1299,8 @@
         "visitor-id": "make-visitor-id: tento soubor cookie se používá k identifikaci jedinečného návštěvníka.",
         "visitor-created-at": "make-visitor-created-at: tento soubor cookie se používá k získání data první návštěvy platformy.",
         "facebook-tracking": "Sledovací cookie Facebooku: tento soubor cookie se používá ke generování statistik návštěvnosti za účelem zlepšení našich stránek a obohacení analýzy našich konzultací.",
-        "hotjar": "Soubory cookies Hotjar: Jedná se o nástroj pro provádění behaviorální analýzy používání internetových stránek. Více informací: "
+        "hotjar": "Soubory cookies Hotjar: Jedná se o nástroj pro provádění behaviorální analýzy používání internetových stránek. Více informací: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Soubory cookies „sociální sítě“:",
