--- a/apps/front/i18n/da.json
+++ b/apps/front/i18n/da.json
@@ -1356,7 +1356,8 @@
         "visitor-id": "make-visitor-id: Denne cookie bruges til at spore besøg på vores tjeneste for at måle trafikken på en anonym og grupperet måde. Browserhændelser sendes til analyseværktøjet MixPanel.",
         "visitor-created-at": "make-visitor-created-at: Denne cookie bruges til at finde datoen for det første besøg på platformen.",
         "facebook-tracking": "Sporingscookie fra Facebook: Denne cookie bruges til at generere statistikker over antallet af besøgende for at forbedre vores websted og analysen af vores høringer.",
-        "hotjar": "Hotjar: Dette er et værktøj, der bruges til at udføre en adfærdsanalyse af brugen af webstedet. Læs mere: "
+        "hotjar": "Hotjar: Dette er et værktøj, der bruges til at udføre en adfærdsanalyse af brugen af webstedet. Læs mere: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Sociale netværkscookies:",
