--- a/apps/front/i18n/es.json
+++ b/apps/front/i18n/es.json
@@ -1280,7 +1280,8 @@
         "visitor-id": "make-visitor-id: esta cookie se utiliza para rastrear las visitas a nuestro servicio con el fin de medir el tráfico de forma anónima y agregada. Los incidentes de navegación se envían a la herramienta de analítica web Mixpanel.",
         "visitor-created-at": "make-visitor-created-at: esta cookie se utiliza para obtener la fecha de la primera visita a la plataforma.",
         "facebook-tracking": "Cookie de seguimiento Facebook: esta cookie se utiliza para generar estadísticas sobre el número de visitantes de nuestro sitio web con el fin de mejorarlo y enriquecer el análisis de nuestras consultas.",
-        "hotjar": "Hotjar: se trata de una herramienta de análisis del comportamiento de uso del sitio web. Para más información: "
+        "hotjar": "Hotjar: se trata de una herramienta de análisis del comportamiento de uso del sitio web. Para más información: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Cookies de «redes sociales»:",
