--- a/apps/front/i18n/et.json
+++ b/apps/front/i18n/et.json
@@ -1356,7 +1356,8 @@
         "visitor-id": "make-visitor-id: see küpsis jälgib meie teenuse külastamist, et mõõta külastatavust anonüümselt ja koondatult. Navigeerimissündmused saadetakse analüüsivahendile MixPanel.",
         "visitor-created-at": "make-visitor-created-at: selle küpsise eesmärgiks on hankida platvormi esmakordse külastamise kuupäev.",
         "facebook-tracking": "Facebooki jälitusküpsis: see küpsis võimaldab luua külastusstatistikat, et parandada meie veebisaiti ja rikastada meie konsulteerimiste analüüsi.",
-        "hotjar": "Hotjar: see vahend võimaldab teostada veebisaidi kasutamisega seotud käitumisanalüüsi. Lisateave: "
+        "hotjar": "Hotjar: see vahend võimaldab teostada veebisaidi kasutamisega seotud käitumisanalüüsi. Lisateave: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Sotsiaalvõrgustike küpsised:",
