--- a/apps/front/i18n/fi.json
+++ b/apps/front/i18n/fi.json
@@ -1253,7 +1253,8 @@
         "visitor-id": "make-visitor-id: tällä evästeellä seurataan vierailuja palveluissamme. Näin voimme mitata liikennettä nimettömästi ja kootusti. Navigointitapahtumat lähetetään MixPanel Analysis Tool -analyysityökaluun.",
         "visitor-created-at": "make-visitor-created-at: tällä evästeellä selvitetään päivämäärä, jolloin vierailija on vieraillut ensimmäisen kerran alustalla.",
         "facebook-tracking": "Facebook-seurantaeväste: tämän evästeen avulla luodaan sivustomme kävijämääriä koskevia tilastoja sivustomme parantamiseksi. Lisäksi sillä edistetään kuulemistemme analysointia.",
-        "hotjar": "Hotjar: Kyseessä on työkalu, jolla voidaan suorittaa verkkosivuston käyttöä koskevaa käyttäytymisanalyysia. Lisätietoja: "
+        "hotjar": "Hotjar: Kyseessä on työkalu, jolla voidaan suorittaa verkkosivuston käyttöä koskevaa käyttäytymisanalyysia. Lisätietoja: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "« Sosiaalisen median » evästeet:",
