--- a/apps/front/i18n/hr.json
+++ b/apps/front/i18n/hr.json
@@ -1383,7 +1383,8 @@
         "visitor-id": "make-visitor-id: ovaj se kolačić upotrebljava za praćenje posjeta našoj platformi kako bi se anonimno i skupno mjerio promet. Događaji navigacije šalju se analitičkom alatu MixPanel.",
         "visitor-created-at": "make-visitor-created-at: ovaj se kolačić upotrebljava za dohvaćanje datuma prvog posjeta platformi.",
         "facebook-tracking": "kolačić za praćenje na društvenoj mreži Facebook: ovaj se kolačić upotrebljava za stvaranje statistike prometa namijenjene poboljšanju našeg mrežnog mjesta i obogaćivanju analize naših rasprava.",
-        "hotjar": "Hotjar: Riječ je o alatu za izvođenje analize ponašanja u korištenju mrežnim mjestom. Kako biste saznali više: "
+        "hotjar": "Hotjar: Riječ je o alatu za izvođenje analize ponašanja u korištenju mrežnim mjestom. Kako biste saznali više: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Kolačići „društvenih mreža”:",
