--- a/apps/front/i18n/hu.json
+++ b/apps/front/i18n/hu.json
@@ -1356,7 +1356,8 @@
         "visitor-id": "make-visitor-id: ezt a sütit az oldalunk látogatásainak nyomon követésére használjuk, hogy anonim és összesített módon mérni tudjuk a forgalmat. A böngészési eseményeket elküldjük a MixPanel elemző eszköznek.",
         "visitor-created-at": "make-visitor-created-at: ez a süti a platformon való első látogatás dátumát tartalmazza.",
         "facebook-tracking": "cookie de tracking Facebook: ennek a sütinek a segítségével statisztikákat készítünk a honlapunk látogatóinak számáról, hogy javítsuk honlapunkat, és bővítsük a konzultációink elemzését.",
-        "hotjar": "Hotjar: Ez az eszköz a weboldal használatának viselkedéselemzésére szolgál. További információ: "
+        "hotjar": "Hotjar: Ez az eszköz a weboldal használatának viselkedéselemzésére szolgál. További információ: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Közösségi hálózati sütik:",
