--- a/apps/front/i18n/lt.json
+++ b/apps/front/i18n/lt.json
@@ -1383,7 +1383,8 @@
         "visitor-id": "make-visitor-id: šis slapukas naudojamas apsilankymams mūsų svetainėje registruoti, kad būtų galima anonimiškai ir apibendrintai įvertinti srautą. Informacija apie naršant atliekamus veiksmus siunčiama į „MixPanel“ analizės įrankį.",
         "visitor-created-at": "make-visitor-created-at: šis slapukas naudojamas pirmojo apsilankymo platformoje datai gauti.",
         "facebook-tracking": "„Facebook“ sekimo slapukas: šis slapukas naudojamas elgsenos svetainėje duomenims rinkti, kad būtų galima atlikti apibendrintą analizę siekiant pagerinti paslaugą.",
-        "hotjar": "„Hotjar“: tai įrankis, skirtas naudotojų elgesiui svetainėje analizuoti. Daugiau informacijos: "
+        "hotjar": "„Hotjar“: tai įrankis, skirtas naudotojų elgesiui svetainėje analizuoti. Daugiau informacijos: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Socialinių tinklų slapukai:",
