--- a/apps/front/i18n/lv.json
+++ b/apps/front/i18n/lv.json
@@ -1383,7 +1383,8 @@
         "visitor-id": "make-visitor-id: šo sīkdatni izmanto, lai izsekotu mūsu pakalpojuma apmeklējumus, lai anonīmi un apkopotā veidā mērītu datplūsmu. Pārlūkošanas epizodes tiek nosūtītas uz MixPanel analīzes rīku.",
         "visitor-created-at": "make-visitor-created-at: šo sīkdatni izmanto, lai iegūtu platformas pirmā apmeklējuma datumu.",
         "facebook-tracking": "Facebook izsekošanas sīkdatne: šī sīkdatne tiek izmantota, lai ģenerētu statistiku par mūsu vietnes apmeklētāju skaitu, lai uzlabotu mūsu vietni un uzlabotu mūsu apmeklējumu analīzi.",
-        "hotjar": "Hotjar: tas ir rīks vietnes izmantošanas uzvedības analīzes veikšanai. Sīkāka informācija: "
+        "hotjar": "Hotjar: tas ir rīks vietnes izmantošanas uzvedības analīzes veikšanai. Sīkāka informācija: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Sociālo tīklu sīkdatnes:",
