--- a/apps/front/i18n/nl.json
+++ b/apps/front/i18n/nl.json
@@ -1253,7 +1253,8 @@
         "visitor-id": "make-visitor-id: deze cookie wordt gebruikt om bezoeken aan onze dienst te volgen om het verkeer op anonieme en geaggregeerde wijze te meten. De browsergebeurtenissen worden naar de analysetool MixPanel gestuurd.",
         "visitor-created-at": "make-visitor-created-at: deze cookie wordt gebruikt om de datum van het eerste bezoek aan het platform te verkrijgen.",
         "facebook-tracking": "Trackingcookie Facebook: deze cookie wordt gebruikt om statistieken te genereren over het aantal bezoekers van de site om onze site te verbeteren en de analyse van onze bezoeken te verbeteren.",
-        "hotjar": "Hotjar: dit is een hulpmiddel voor het uitvoeren van gedragsanalyses van websitegebruik. Voor meer informatie: "
+        "hotjar": "Hotjar: dit is een hulpmiddel voor het uitvoeren van gedragsanalyses van websitegebruik. Voor meer informatie: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Cookies voor sociale netwerken:",
