--- a/apps/front/i18n/pl.json
+++ b/apps/front/i18n/pl.json
@@ -1280,7 +1280,8 @@
         "visitor-id": "make-visitor-id: plik cookie pozwalający śledzić przebieg wizyt na naszej usłudze w celu pomiaru ruchu w sposób anonimowy i zagregowany. Elementy nawigacyjne są wysyłane do narzędzia do analizy MixPanel.",
         "visitor-created-at": "make-visitor-created-at: ten plik cookie pozwala otrzymać datę pierwszej wizyty na platformie.",
         "facebook-tracking": "cookie Facebook tracking: pozwala na generowanie statystyk dotyczących odwiedzin, których celem jest ulepszenie naszej strony i wzbogacenie analizy naszych konsultacji.",
-        "hotjar": "Hotjar: Jest to narzędzie do analizy behawioralnej użytkowania strony internetowej. Aby dowiedzieć się więcej: "
+        "hotjar": "Hotjar: Jest to narzędzie do analizy behawioralnej użytkowania strony internetowej. Aby dowiedzieć się więcej: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Pliki cookie „sieci społecznościowych”:",
