--- a/apps/front/i18n/pt.json
+++ b/apps/front/i18n/pt.json
@@ -1383,7 +1383,8 @@
         "visitor-id": "make-visitor-id: este cookie é utilizado para acompanhar as visitas ao nosso serviço a fim de medir o tráfego de uma forma anónima e agregada. Os eventos de navegação são enviados para a ferramenta de análise MixPanel.",
         "visitor-created-at": "make-visitor-created-at: este cookie é utilizado para obter a data da primeira visita à plataforma.",
         "facebook-tracking": "cookie de tracking Facebook: este cookie permite gerar estatísticas sobre o número de visitantes do nosso sítio Internet, a fim de o melhorar e de enriquecer a análise das nossas consultas.",
-        "hotjar": "Hotjar: trata-se de um instrumento de análise comportamental da utilização do sítio Internet. Para mais informações: "
+        "hotjar": "Hotjar: trata-se de um instrumento de análise comportamental da utilização do sítio Internet. Para mais informações: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Os cookies das “redes sociais”:",
