--- a/apps/front/i18n/sk.json
+++ b/apps/front/i18n/sk.json
@@ -1383,7 +1383,8 @@
         "visitor-id": "make-visitor-id: tento súbor cookie sa používa na sledovanie návštev našej služby s cieľom merať návštevnosť anonymným a agregovaným spôsobom. Udalosti prehliadania sa odosielajú do analytického nástroja MixPanel.",
         "visitor-created-at": "make-visitor-created-at: tento súbor cookie sa používa na získanie dátumu prvej návštevy platformy.",
         "facebook-tracking": "Sledovací súbor cookie spoločnosti Facebook: tento súbor cookie sa používa na vytváranie štatistík o počte návštevníkov našej stránky s cieľom zlepšiť našu stránku a zlepšiť analýzu návštevnosti.",
-        "hotjar": "Hotjar: Ide o nástroj na behaviorálnu analýzu používania webových stránok. Zistiť viac: "
+        "hotjar": "Hotjar: Ide o nástroj na behaviorálnu analýzu používania webových stránok. Zistiť viac: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Súbory cookie sociálnych sietí:",
