--- a/apps/front/i18n/sl.json
+++ b/apps/front/i18n/sl.json
@@ -1410,7 +1410,8 @@
         "visitor-id": "make-visitor-id: s tem piškotkom se spremljajo obiski našega spletišča zaradi anonimnega in zbirnega merjenja prometa. Brskalne aktivnosti se pošljejo v analitično orodje MixPanel.",
         "visitor-created-at": "make-visitor-created-at: s tem piškotkom se pridobi datum prvega obiska platforme.",
         "facebook-tracking": "tracking cookie Facebook: ta piškotek omogoča pripravo statističnih podatkov o obisku, ki so namenjeni izboljšanju našega spletišča in analize naših posvetovanj.",
-        "hotjar": "Hotjar: S tem orodjem se analizira ravnanje ob uporabi spletišča. Več o tem: "
+        "hotjar": "Hotjar: S tem orodjem se analizira ravnanje ob uporabi spletišča. Več o tem: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Piškotki »družbenih omrežij«:",
