--- a/apps/front/i18n/sv.json
+++ b/apps/front/i18n/sv.json
@@ -1356,7 +1356,8 @@
         "visitor-id": "make-visitor-id: den här cookien gör att besöken på vår tjänst kan följas så att trafiken kan mätas på ett anonymt och sammanhållet sätt. Navigeringshändelserna skickas till analysverktyget MixPanel.",
         "visitor-created-at": "make-visitor-created-at: den här cookien gör att man kan se datumet för det första besöket på plattformen.",
         "facebook-tracking": "Facebook-spårningscookie: den här cookien gör att det genereras besöksstatistik som förbättrar vår webbplats och analysen av våra samråd.",
-        "hotjar": "Hotjar: Det är ett verktyg som hjälper till att analysera besökarnas beteende när de använder webbplatsen. Läs mer: "
+        "hotjar": "Hotjar: Det är ett verktyg som hjälper till att analysera besökarnas beteende när de använder webbplatsen. Läs mer: ",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "”Sociala medier-cookies”:",
