--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1299,7 +1299,8 @@
         "visitor-id": "make-visitor-id: цей файл cookie використовується для ідентифікації унікального відвідувача.",
         "visitor-created-at": "make-visitor-created-at: цей файл cookie використовується для отримання дати першого відвідування платформи.",
         "facebook-tracking": "Файл cookie для відстеження Facebook: цей файл cookie використовується для збору статистики про кількість відвідувачів нашого сайту задля поліпшення роботи нашого сайту й аналізу відвідуваності.",
-        "hotjar": "Hotjar: це інструмент для поведінкового аналізу використання вебсайтів. Більш детальна інформація:"
+        "hotjar": "Hotjar: це інструмент для поведінкового аналізу використання вебсайтів. Більш детальна інформація:",
+        "told": "@@cookies_management.details.statistics.told|fr:Told : Il s’agit d’un outil permettant de mieux comprendre les besoins et les attentes des utilisateurs via le traitement des retours des utilisateurs. Pour en savoir plus : "
       },
       "social": {
         "name": "Файли соціальних мереж:",
