--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -423,7 +423,8 @@
       "moderation_link": "Moderationscharta",
       "button_propose": "Bestätigen",
       "and": "und unsere",
-      "gtc": " nutzungsbedingungen"
+      "gtc": " nutzungsbedingungen",
+      "account_warning": "@@proposal_submit.form.account_warning|fr:🔔 Vous devez être connecté pour soumettre une proposition."
     },
     "authentication": {
       "button_back": "Meinen Vorschlag ändern",
@@ -435,7 +436,8 @@
       "back": "Zurück",
       "last_step_red": "Es bleibt nur noch ein Schritt ",
       "last_step": "um deinen Vorschlag einzureichen !",
-      "button_login": "Ich verbinde mich mit"
+      "button_login": "Ich verbinde mich mit",
+      "account_use": "@@proposal_submit.authentication.account_use|fr:Votre compte citoyen vous permettra de suivre la vie de votre proposition, la partager et de voir quand elle est en ligne ainsi qu’assurer la qualité du débat"
     },
     "success": {
       "title": "Danke, {{name}}!",
