--- a/apps/front/i18n/et.json
+++ b/apps/front/i18n/et.json
@@ -432,7 +432,8 @@
       "moderation_link": "modereerimise eeskirju",
       "button_propose": "ETTEPANEK",
       "and": "ja meie",
-      "gtc": " kasutustingimused"
+      "gtc": " kasutustingimused",
+      "account_warning": "@@proposal_submit.form.account_warning|fr:🔔 Vous devez être connecté pour soumettre une proposition."
     },
     "authentication": {
       "button_back": "Muuda minu ettepanekut",
@@ -444,7 +445,8 @@
       "button_login_text": "Mul on juba konto,",
       "button_login_link": "login sisse.",
       "button_login": "Logi sisse",
-      "back_authentication": "Tagasi sisselogimise aknasse"
+      "back_authentication": "Tagasi sisselogimise aknasse",
+      "account_use": "@@proposal_submit.authentication.account_use|fr:Votre compte citoyen vous permettra de suivre la vie de votre proposition, la partager et de voir quand elle est en ligne ainsi qu’assurer la qualité du débat"
     },
     "success": {
       "title": "Aitäh, {{name}}!",
