--- a/apps/front/i18n/lt.json
+++ b/apps/front/i18n/lt.json
@@ -437,7 +437,8 @@
       "moderation_link": "moderavimo taisykles",
       "button_propose": "PASIŪLYTI",
       "and": "ir mūsų",
-      "gtc": " naudojimo sąlygos"
+      "gtc": " naudojimo sąlygos",
+      "account_warning": "@@proposal_submit.form.account_warning|fr:🔔 Vous devez être connecté pour soumettre une proposition."
     },
     "authentication": {
       "button_back": "Redaguoti pasiūlymą",
@@ -449,7 +450,8 @@
       "button_login_text": "Jau turiu paskyrą,",
       "button_login_link": "prisijungti.",
       "button_login": "Prisijungti",
-      "back_authentication": "Grįžti į prisijungimo puslapį"
+      "back_authentication": "Grįžti į prisijungimo puslapį",
+      "account_use": "@@proposal_submit.authentication.account_use|fr:Votre compte citoyen vous permettra de suivre la vie de votre proposition, la partager et de voir quand elle est en ligne ainsi qu’assurer la qualité du débat"
     },
     "success": {
       "title": "Ačiū, {{name}}!",
