--- a/apps/front/i18n/sv.json
+++ b/apps/front/i18n/sv.json
@@ -432,7 +432,8 @@
       "moderation_link": "modereringspolicy",
       "button_propose": "LÄGG ETT FÖRSLAG",
       "and": "och vår",
-      "gtc": " användarvillkor"
+      "gtc": " användarvillkor",
+      "account_warning": "@@proposal_submit.form.account_warning|fr:🔔 Vous devez être connecté pour soumettre une proposition."
     },
     "authentication": {
       "button_back": "Ändra mitt förslag",
@@ -444,7 +445,8 @@
       "button_login_text": "Jag har redan ett konto,",
       "button_login_link": "jag loggar in.",
       "button_login": "Logga in",
-      "back_authentication": "Gå tillbaka till inloggningsskärmen"
+      "back_authentication": "Gå tillbaka till inloggningsskärmen",
+      "account_use": "@@proposal_submit.authentication.account_use|fr:Votre compte citoyen vous permettra de suivre la vie de votre proposition, la partager et de voir quand elle est en ligne ainsi qu’assurer la qualité du débat"
     },
     "success": {
       "title": "Tack {{name}}!",
