--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -219,7 +219,8 @@
       "moderation_link": "Moderationscharta",
       "button_propose": "Bestätigen",
       "and": "und unsere",
-      "gtc": " nutzungsbedingungen"
+      "gtc": " nutzungsbedingungen",
+      "account_warning": "@@proposal_submit.form.account_warning|fr:🔔 Vous devez être connecté pour soumettre une proposition."
     },
     "authentication": {
       "button_login_text": "Ich habe bereits ein Konto",
@@ -228,7 +229,8 @@
       "back": "Zurück",
       "button_login": "Ich verbinde mich mit",
       "last_step_red": "Es bleibt nur noch ein Schritt ",
-      "last_step": "um deinen Vorschlag einzureichen !"
+      "last_step": "um deinen Vorschlag einzureichen !",
+      "account_use": "@@proposal_submit.authentication.account_use|fr:Votre compte citoyen vous permettra de suivre la vie de votre proposition, la partager et de voir quand elle est en ligne ainsi qu’assurer la qualité du débat"
     },
     "success": {
       "button": "Weiter abstimmen",
