--- a/apps/widget/i18n/pt.json
+++ b/apps/widget/i18n/pt.json
@@ -225,7 +225,8 @@
       "moderation_link": "carta de moderação",
       "button_propose": "PROPOR",
       "and": "e a nossa",
-      "gtc": " condições de utilização"
+      "gtc": " condições de utilização",
+      "account_warning": "@@proposal_submit.form.account_warning|fr:🔔 Vous devez être connecté pour soumettre une proposition."
     },
     "authentication": {
       "back": "Voltar",
@@ -234,7 +235,8 @@
       "button_login_text": "Já tenho uma conta,",
       "button_login_link": "inicio sessão.",
       "button_login": "Iniciar sessão",
-      "back_authentication": "Voltar para o ecrã de início de sessão"
+      "back_authentication": "Voltar para o ecrã de início de sessão",
+      "account_use": "@@proposal_submit.authentication.account_use|fr:Votre compte citoyen vous permettra de suivre la vie de votre proposition, la partager et de voir quand elle est en ligne ainsi qu’assurer la qualité du débat"
     },
     "success": {
       "button": "Continuar a votar",
