--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -203,7 +203,8 @@
       "moderation_link": "moderation charter",
       "button_propose": "Submit",
       "and": "and our",
-      "gtc": " terms of use"
+      "gtc": " terms of use",
+      "account_warning": "@@proposal_submit.form.account_warning|fr:🔔 Vous devez être connecté pour soumettre une proposition."
     },
     "authentication": {
       "button_login_text": "I already have an account,",
@@ -212,7 +213,8 @@
       "last_step_red": "Only one step left ",
       "last_step": "to send your proposal !",
       "back": "Back",
-      "button_login": "Sign up with"
+      "button_login": "Sign up with",
+      "account_use": "@@proposal_submit.authentication.account_use|fr:Votre compte citoyen vous permettra de suivre la vie de votre proposition, la partager et de voir quand elle est en ligne ainsi qu’assurer la qualité du débat"
     }
   },
   "vote": {
