feat(front): added za and ma countries

--- a/apps/front/i18n/bg.json
+++ b/apps/front/i18n/bg.json
@@ -1315,7 +1315,9 @@
     "SK": "Словакия",
     "US": "САЩ",
     "UA": "Украйна",
-    "MD": "Молдова"
+    "MD": "Молдова",
+    "ZA": "Южна Африка",
+    "MA": "Мароко"
   },
   "languages": {
     "fr": "Français",
