--- a/apps/front/i18n/da.json
+++ b/apps/front/i18n/da.json
@@ -1418,7 +1418,9 @@
     "SK": "Slovakiet",
     "US": "USA",
     "UA": "Ukraine",
-    "MD": "Moldova"
+    "MD": "Moldova",
+    "ZA": "Sydafrika",
+    "MA": "Marokko"
   },
   "languages": {
     "fr": "Français",
