--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -1409,7 +1409,9 @@
     "SK": "Slowakei",
     "US": "USA",
     "UA": "Ukrainische",
-    "MD": "Moldawien"
+    "MD": "Moldawien",
+    "ZA": "Südafrika",
+    "MA": "Marokko"
   },
   "languages": {
     "fr": "Français",
