--- a/apps/front/i18n/el.json
+++ b/apps/front/i18n/el.json
@@ -1418,7 +1418,9 @@
     "SK": "Σλοβακία",
     "US": "ΗΠΑ",
     "UA": "Ουκρανία",
-    "MD": "Μολδαβία"
+    "MD": "Μολδαβία",
+    "ZA": "Νότια Αφρική",
+    "MA": "Μαρόκο"
   },
   "languages": {
     "fr": "Français",
