--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -1385,7 +1385,9 @@
     "SI": "Slovenia",
     "SK": "Slovakia",
     "US": "USA",
-    "UA": "Ukraine"
+    "UA": "Ukraine",
+    "ZA": "South Africa",
+    "MA": "Morocco"
   },
   "languages": {
     "fr": "Français",
