--- a/apps/front/i18n/es.json
+++ b/apps/front/i18n/es.json
@@ -1342,7 +1342,9 @@
     "SK": "Eslovaquia",
     "US": "EE. UU.",
     "UA": "Ucrania",
-    "MD": "Moldavia"
+    "MD": "Moldavia",
+    "ZA": "Sudáfrica",
+    "MA": "Marruecos"
   },
   "languages": {
     "fr": "Français",
