--- a/apps/front/i18n/et.json
+++ b/apps/front/i18n/et.json
@@ -1418,7 +1418,9 @@
     "SK": "Slovakkia",
     "US": "USA",
     "UA": "Ukraina",
-    "MD": "Moldova"
+    "MD": "Moldova",
+    "ZA": "Lõuna-Aafrika",
+    "MA": "Maroko"
   },
   "languages": {
     "fr": "Français",
