--- a/apps/front/i18n/fi.json
+++ b/apps/front/i18n/fi.json
@@ -1315,7 +1315,9 @@
     "SK": "Slovakia",
     "US": "Yhdysvallat",
     "UA": "Ukraina",
-    "MD": "Moldova"
+    "MD": "Moldova",
+    "ZA": "Etelä-Afrikka",
+    "MA": "Marokko"
   },
   "languages": {
     "fr": "Français",
