--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -1450,7 +1450,9 @@
     "SI": "Slovénie",
     "SK": "Slovaquie",
     "US": "USA",
-    "UA": "Ukraine"
+    "UA": "Ukraine",
+    "ZA": "Afrique du Sud",
+    "MA": "Maroc"
   },
   "languages": {
     "fr": "Français",
