--- a/apps/front/i18n/hr.json
+++ b/apps/front/i18n/hr.json
@@ -1445,7 +1445,9 @@
     "SK": "Slovačka",
     "US": "Sjedinjene Američke Države",
     "UA": "Ukrajina",
-    "MD": "Moldavija"
+    "MD": "Moldavija",
+    "ZA": "Južna Afrika",
+    "MA": "Maroko"
   },
   "languages": {
     "fr": "Français",
