--- a/apps/front/i18n/hu.json
+++ b/apps/front/i18n/hu.json
@@ -1418,7 +1418,9 @@
     "SK": "Szlovákia",
     "US": "Amerikai Egyesült Államok",
     "UA": "Ukrajna",
-    "MD": "Moldova"
+    "MD": "Moldova",
+    "ZA": "Dél-Afrika",
+    "MA": "Marokkó"
   },
   "languages": {
     "fr": "Français",
