--- a/apps/front/i18n/it.json
+++ b/apps/front/i18n/it.json
@@ -1342,7 +1342,9 @@
     "SK": "Slovacchia",
     "US": "USA",
     "UA": "Ucraina",
-    "MD": "Moldavia"
+    "MD": "Moldavia",
+    "ZA": "Sudafrica",
+    "MA": "Marocco"
   },
   "languages": {
     "fr": "Français",
