--- a/apps/front/i18n/lv.json
+++ b/apps/front/i18n/lv.json
@@ -1445,7 +1445,9 @@
     "SK": "Slovākija",
     "US": "ASV",
     "UA": "Ukraina",
-    "MD": "Moldova"
+    "MD": "Moldova",
+    "ZA": "Dienvidāfrika",
+    "MA": "Maroka"
   },
   "languages": {
     "fr": "Français",
