--- a/apps/front/i18n/pl.json
+++ b/apps/front/i18n/pl.json
@@ -1342,7 +1342,9 @@
     "SK": "Słowacja",
     "US": "USA",
     "UA": "Ukraina",
-    "MD": "Mołdawia"
+    "MD": "Mołdawia",
+    "ZA": "Republika Południowej Afryki",
+    "MA": "Maroko"
   },
   "languages": {
     "fr": "Français",
