--- a/apps/front/i18n/pt.json
+++ b/apps/front/i18n/pt.json
@@ -1445,7 +1445,9 @@
     "SK": "Eslováquia",
     "US": "EUA",
     "UA": "Ucrânia",
-    "MD": "Moldávia"
+    "MD": "Moldávia",
+    "ZA": "África do Sul",
+    "MA": "Marrocos"
   },
   "languages": {
     "fr": "Français",
