--- a/apps/front/i18n/ro.json
+++ b/apps/front/i18n/ro.json
@@ -1342,7 +1342,9 @@
     "SK": "Slovacia",
     "US": "SUA",
     "UA": "Ucraina",
-    "MD": "Moldova"
+    "MD": "Moldova",
+    "ZA": "Africa de Sud",
+    "MA": "Maroc"
   },
   "languages": {
     "fr": "Français",
