--- a/apps/front/i18n/sl.json
+++ b/apps/front/i18n/sl.json
@@ -1472,7 +1472,9 @@
     "SK": "Slovaška",
     "US": "ZDA",
     "UA": "Ukrajina",
-    "MD": "Moldavija"
+    "MD": "Moldavija",
+    "ZA": "Južna Afrika",
+    "MA": "Maroko"
   },
   "languages": {
     "fr": "Français",
