--- a/apps/front/i18n/sv.json
+++ b/apps/front/i18n/sv.json
@@ -1418,7 +1418,9 @@
     "SK": "Slovakien",
     "US": "USA",
     "UA": "Ukraina",
-    "MD": "Moldavien"
+    "MD": "Moldavien",
+    "ZA": "Sydafrika",
+    "MA": "Marocko"
   },
   "languages": {
     "fr": "Français",
