--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -1361,7 +1361,9 @@
     "SK": "Slovensko",
     "UA": "Ukrajina",
     "US": "USA",
-    "MD": "Moldavsko"
+    "MD": "Moldavsko",
+    "ZA": "Jihoafrická republika",
+    "MA": "Maroko"
   },
   "languages": {
     "fr": "Français",
