--- a/apps/front/i18n/lt.json
+++ b/apps/front/i18n/lt.json
@@ -1445,7 +1445,9 @@
     "SK": "Slovakija",
     "US": "JAV",
     "UA": "Ukraina",
-    "MD": "Moldova"
+    "MD": "Moldova",
+    "ZA": "Pietų Afrika",
+    "MA": "Marokas"
   },
   "languages": {
     "fr": "Français",
