--- a/apps/front/i18n/nl.json
+++ b/apps/front/i18n/nl.json
@@ -1315,7 +1315,9 @@
     "SK": "Slowakije",
     "US": "VS",
     "UA": "Oekraïne",
-    "MD": "Moldavië"
+    "MD": "Moldavië",
+    "ZA": "Zuid-Afrika",
+    "MA": "Marokko"
   },
   "languages": {
     "fr": "Français",
