--- a/apps/front/i18n/sk.json
+++ b/apps/front/i18n/sk.json
@@ -1445,7 +1445,9 @@
     "SK": "Slovensko",
     "US": "USA",
     "UA": "Ukrajina",
-    "MD": "Moldavsko"
+    "MD": "Moldavsko",
+    "ZA": "Južna Afrika",
+    "MA": "Maroko"
   },
   "languages": {
     "fr": "Français",
