--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1361,7 +1361,9 @@
     "SK": "Словаччина",
     "UA": "Україна",
     "US": "США",
-    "MD": "Молдова"
+    "MD": "Молдова",
+    "ZA": "Південна Африка",
+    "MA": "Марокко"
   },
   "languages": {
     "fr": "Français",
